--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,16 @@
             "email": "parkle.lee@xenyo.com"
         }
     ],
-    "require": {},
+    "require": {
+        "ramsey/uuid": "^4.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "Xenyo\\": "src/"
+        }
+    },
     "bin": [
         "bin/export-db",
-        "bin/import-db",
-        "bin/reset-uuid"
+        "bin/import-db"
     ]
 }
